# template-workflow-showcase

./: .gitignore  README.md  pyproject.toml
src/app/fanout/: workflow.py
src/app/pause/: workflow.py
src/app/state_query/: workflow.py
src/app/stream/: workflow.py
ui/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  hooks.ts  index.css
ui/src/components/: handler-id.tsx  sparkline.tsx
ui/src/pages/: Home.tsx
ui/src/pages/fanout/: events.ts  page.tsx
ui/src/pages/hooks-reference/: page.tsx
ui/src/pages/pause/: events.ts  page.tsx
ui/src/pages/state/: events.ts  query-page.tsx  signal-page.tsx
ui/src/pages/stream/: events.ts  page.tsx
