[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "llama-index-workflows[server]>=2.5.0,<3.0.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.1a16",
    "pytest>=8.4.1",
    "hatch>=1.14.1",
    "click>=8.0.0,!=8.3.0",
]

[tool.hatch.envs.default.scripts]
"format" = "ruff format ."
"format-check" = "ruff format --check ."
"lint" = "ruff check --fix ."
"lint-check" = ["ruff check ."]
typecheck = "ty check src"
test = "pytest"
"all-check" = ["format-check", "lint-check", "test"]
"all-fix" = ["format", "lint", "test"]

 [tool.llamadeploy.ui]
 directory = "./ui"
 
 [tool.llamadeploy]
 env-files = [".env"]
 
 [tool.llamadeploy.workflows]
fanout = "app.fanout.workflow:fanout_workflow"
snapshot_query = "app.state_query.workflow:state_query_workflow"
stream = "app.stream.workflow:stream_workflow"
pause = "app.pause.workflow:pause_workflow"
